--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: epics-seq
 Section: admin
 Priority: optional
 Maintainer: Martin Konrad <konrad@frib.msu.edu>
-Build-Depends: debhelper (>= 9), epics-debhelper, re2c (>= 0.9.9), epics-dev
+Build-Depends: debhelper (>= 9), epics-debhelper, re2c (>= 0.9.9), epics-dev,
 Standards-Version: 3.9.6
 Homepage: http://www-csr.bessy.de/control/SoftDist/sequencer/
 Vcs-Git: https://github.com/epicsdeb/epics-seq.git
@@ -10,8 +10,8 @@ Vcs-Browser: https://github.com/epicsdeb/epics-seq
 
 Package: epics-seq-dev
 Architecture: any
-Depends: libseq2.2.3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Conflicts: epics-synapps (<= 20141009-2)
+Depends: libseq2.2.3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}, ${epics:Depends},
+Conflicts: epics-synapps,
 Description: State Notation Language and Sequencer
  The Experimental Physics and Industrial Control System is a collection of
  tools, libraries and applications for creating a distributed soft real-time
@@ -25,8 +25,8 @@ Description: State Notation Language and Sequencer
 Package: libseq2.2.3
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Conflicts: epics-synapps (<= 20141009-2)
+Depends: ${shlibs:Depends}, ${misc:Depends},
+Conflicts: epics-synapps,
 Provides: libseq
 Description: State Notation Language and Sequencer
  The Experimental Physics and Industrial Control System is a collection of
