--- a/debian/rules
+++ b/debian/rules
@@ -1,19 +1,15 @@
 #!/usr/bin/make -f
 export DH_VERBOSE = 1
 
-export EPICS_HOST_ARCH:=$(shell /usr/lib/epics/startup/EpicsHostArch)
-
-#export EPICS_BASE = /usr/lib/epics
-
 # main packaging script based on dh7 syntax
 %:
 	dh $@  --with epics -Sepicsmake --parallel
 
 override_dh_auto_test:
+	# skip
 
 override_dh_install:
 	rm -f debian/tmp/usr/lib/epics/bin/linux-*/lemon
-	rm -f debian/tmp/usr/lib/epics/configure/RELEASE
 	install -d debian/tmp/etc/epics/configure/rules.d
 	mv debian/tmp/usr/lib/epics/configure/RULES_BUILD debian/tmp/etc/epics/configure/rules.d/seqsnc.make
 	dh_install --fail-missing
