--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Vcs-Browser: https://github.com/epicsdeb/epics-seq
 Package: epics-seq-dev
 Architecture: any
 Depends: libseq2.2.3 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}, ${epics:Depends},
-Conflicts: epics-synapps,
+Conflicts: epics-synapps, epics-synapps-dev,
 Description: State Notation Language and Sequencer
  The Experimental Physics and Industrial Control System is a collection of
  tools, libraries and applications for creating a distributed soft real-time
@@ -31,7 +31,6 @@ Package: libseq2.2.3
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
-Conflicts: epics-synapps,
 Provides: libseq
 Description: State Notation Language and Sequencer
  The Experimental Physics and Industrial Control System is a collection of
@@ -49,6 +48,7 @@ Depends: ${rtems:Depends},
          epics-seq-dev (>= ${source:Version}),
          epics-seq-dev (<< ${source:Version}.1~),
          ${misc:Depends},
+Conflicts: rtems-synapps-mvme2100,
 Description: State Notation Language and Sequencer
  The Experimental Physics and Industrial Control System is a collection of
  tools, libraries and applications for creating a distributed soft real-time
@@ -67,6 +67,7 @@ Depends: ${rtems:Depends},
          epics-seq-dev (>= ${source:Version}),
          epics-seq-dev (<< ${source:Version}.1~),
          ${misc:Depends},
+Conflicts: rtems-synapps-mvme3100,
 Description: State Notation Language and Sequencer
  The Experimental Physics and Industrial Control System is a collection of
  tools, libraries and applications for creating a distributed soft real-time
@@ -85,6 +86,7 @@ Depends: ${rtems:Depends},
          epics-seq-dev (>= ${source:Version}),
          epics-seq-dev (<< ${source:Version}.1~),
          ${misc:Depends},
+Conflicts: rtems-synapps-mvme5500,
 Description: State Notation Language and Sequencer
  The Experimental Physics and Industrial Control System is a collection of
  tools, libraries and applications for creating a distributed soft real-time
@@ -103,6 +105,7 @@ Depends: ${rtems:Depends},
          epics-seq-dev (>= ${source:Version}),
          epics-seq-dev (<< ${source:Version}.1~),
          ${misc:Depends},
+Conflicts: rtems-synapps-pc386,
 Description: State Notation Language and Sequencer
  The Experimental Physics and Industrial Control System is a collection of
  tools, libraries and applications for creating a distributed soft real-time
