--- a/examples/Makefile
+++ b/examples/Makefile
@@ -6,6 +6,8 @@ DIRS += demo
 DIRS += johng
 #DIRS += parallel
 DIRS += simple
+DIRS += small
 DIRS += pvGetAsync
+DIRS += traffic
 
 include $(TOP)/configure/RULES_DIRS
