--- a/configure/CONFIG
+++ b/configure/CONFIG
@@ -25,9 +25,17 @@ ifdef T_A
   -include $(TOP)/configure/O.$(T_A)/CONFIG_APP_INCLUDE
 endif
 
+# This avoids deprecation warnings when compiling against
+# base 3.16 or higher
+USR_CPPFLAGS += -DUSE_TYPED_RSET
+
 EPICS_HAS_UNIT_TEST := $(shell $(PERL) -e\
- 'print($(EPICS_REVISION) > 14 || ($(EPICS_REVISION) == 14 && $(EPICS_MODIFICATION) >= 10))')
+ 'print($(EPICS_VERSION) > 3 || ($(EPICS_VERSION) == 3 &&\
+  ($(EPICS_REVISION) > 14 || ($(EPICS_REVISION) == 14 && $(EPICS_MODIFICATION) >= 10))))')
 
 ECHO := $(if $(findstring s,$(MAKEFLAGS)),$(NOP),@echo)
 
-SEQ_RELEASE = 2.2.3
+# to check for strict C90 compatibility with gcc uncomment the following line:
+#USR_CFLAGS += -std=c90 -Wpedantic -Wno-long-long -Wno-format
+
+SEQ_RELEASE = 2.2.6
