--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,14 @@ Source: epics-seq
 Section: admin
 Priority: optional
 Maintainer: Martin Konrad <konrad@frib.msu.edu>
-Build-Depends: debhelper (>= 9.20141010), dpkg-dev (>= 1.17.14),
+Build-Depends: debhelper (>= 10), dpkg-dev (>= 1.17.14),
                epics-debhelper (>= 8.14~), re2c (>= 0.9.9), epics-dev,
                rtems-epics-mvme2100 <pkg.epics-base.rtems>,
                rtems-epics-mvme3100 <pkg.epics-base.rtems>,
                rtems-epics-mvme5500 <pkg.epics-base.rtems>,
                rtems-epics-pc386 <pkg.epics-base.rtems>,
 XS-Rtems-Build-Depends: rtems-epics
-Standards-Version: 3.9.6
+Standards-Version: 4.3.0
 Homepage: http://www-csr.bessy.de/control/SoftDist/sequencer/
 Vcs-Git: https://github.com/epicsdeb/epics-seq.git
 Vcs-Browser: https://github.com/epicsdeb/epics-seq
