--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@ export DH_VERBOSE = 1
 
 # main packaging script based on dh7 syntax
 %:
-	dh $@  --with epics -Sepicsmake --parallel
+	dh $@  --with epics -Sepicsmake
 
 override_dh_auto_test:
 	# skip
